a couple spacing issues

--- a/wp-content/themes/makerfaire/less/navigation.less
+++ b/wp-content/themes/makerfaire/less/navigation.less
@@ -359,6 +359,7 @@ li.hidelink a:visited {
 			width: 125%;
 			margin-left: -25%;
 			padding-left: 25%;
+			margin-bottom: 15px;
 			display: flex;
       	align-items: center;
 			&:hover { background: #00AEEF; }
@@ -373,7 +374,6 @@ li.hidelink a:visited {
 				@media(max-width:992px) {
 					font-size: 22px;
 					line-height: 24px;
-					margin-top: -10px;
 				}
 			}		
 			&:after {
